# joongobooks_back_v2

./: .gitmessage.txt  LICENSE  README.md  manage.py  mypy.ini  pyproject.toml
.github/workflows/: CI.yml
accounts/tests/views/: test_signup_view.py
joongobooks/: asgi.py  settings.py  urls.py  wsgi.py
