[tool.poetry]
name = "joongobooks"
version = "2.0.0"
description = "It is a used book platform where users can freely sell and purchase books."
authors = ["simseulnyang <happysseul627@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
django-environ = "^0.11.2"
djangorestframework = "^3.14.0"
cryptography = "^41.0.4"
drf-yasg = "^1.21.7"
djangorestframework-simplejwt = "^5.3.0"
djangorestframework-camel-case = "^1.4.2"
psycopg2-binary = "^2.9.9"
django-filter = "^23.3"
drf-yasg-stubs = "^0.1.4"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.6"
asyncio = "^3.4.3"
tqdm = "^4.66.1"
APScheduler = "^3.10.4"
django-redis = "^5.4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

django-stubs = "^4.2.6"
djangorestframework-stubs = "^3.14.4"

flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.9.1"
pre-commit = "^3.4.0"

coverage = "^7.3.2"

[tool.black]
line-length = 140
target-version = ['py311']
force-exclude = 'migrations'

[tool.isort]
profile = "black"
filter_files = true
skip_glob = ["*/migrations/*", "config/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
